[package]
name = "todoapp3"
version = "0.1.0"
authors = ["neosam <neosam+github@posteo.de>"]
edition = "2018"

[lib]
name = "todoapp3"
path = "src/lib.rs"

[[bin]]
name = "todoapp3-cli"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
snafu = "0.3"
subprocess = "0.1"
lazy_static = "1.3"
markdown = "0.2"
chrono = { version = "0.4", features = ["serde"] }

