[package]
name = "sors"
version = "0.0.1"
authors = ["Simon Goller <neosam+github@posteo.de>"]
edition = "2018"
description = "A standalone organization system to organize and track tasks"
repository = "https://github.com/neosam/sors"
keywords = ["todo", "task", "gtd", "timetrack"]
license = "MIT/Apache-2.0"

[lib]
name = "sors"
path = "src/lib.rs"

[[bin]]
name = "sors-cli"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
snafu = "0.3"
subprocess = "0.1"
lazy_static = "1.3"
markdown = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rustyline = "4.1.0"

